Add Neon database integration for payment callback and player data sync

--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
+    "@neondatabase/serverless": "^1.0.2",
+    "@vercel/node": "^3.0.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@google/genai": "^1.34.0",
     "recharts": "^3.6.0",
-    "stripe": "^17.0.0",
-    "@vercel/node": "^3.0.0"
+    "stripe": "^17.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
