Add comprehensive logging for webhook body type detection
- Add detailed logging to identify body type (string/Buffer/object)
- Log contentType, bodyType, and body structure for debugging
- This will help diagnose why Stripe webhook signature verification is failing
- Update vercel.json with route configuration

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,16 @@
     "api/webhook-neon.ts": {
       "includeFiles": "**/*"
     }
-  }
+  },
+  "routes": [
+    {
+      "src": "/api/webhook-neon",
+      "dest": "/api/webhook-neon",
+      "methods": ["POST"],
+      "headers": {
+        "content-type": "application/json"
+      }
+    }
+  ]
 }
 
